--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ params:
   layout_style: overflow
   palette: blue
   header:
-    title: Stackbit Fresh
+    title: Noah LaFerriere
     tagline: Header Tagline
     profile_img: images/avatar.png
     profile_img_alt: Author avatar
