--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ params:
   palette: blue
   header:
     title: Noah LaFerriere
-    tagline: Header Tagline
+    tagline: Devops Engineer
     profile_img: images/avatar.png
     profile_img_alt: Author avatar
     background: dark
