--- a/config.yaml
+++ b/config.yaml
@@ -5,9 +5,9 @@ params:
   layout_style: overflow
   palette: blue
   header:
-    title: Stackbit Fresh
-    tagline: Header Tagline
-    profile_img: images/avatar.png
+    title: Noah LaFerriere
+    tagline: Devops Engineer
+    profile_img: images/IMG_5182(1).jpeg
     profile_img_alt: Author avatar
     background: dark
     has_nav: true
