--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ params:
       - label: Home
         url: /
         style: link
-      - label: Blog
+      - label: Experience
         url: /blog/
         style: link
       - label: Style Guide
