--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ params:
       - label: Experience
         url: /blog/
         style: link
-      - label: Style Guide
+      - label: ''
         url: /style-guide/
         style: link
       - label: About
