--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,7 @@ params:
       - label: ''
         url: /style-guide/
         style: link
-      - label: About
+      - label: Skills
         url: /about/
         style: link
       - label: Contact
