--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ baseURL: /
 params:
   description: Personal blogging theme for Stackbit
   layout_style: overflow
-  palette: green
+  palette: violet
   header:
     title: Noah LaFerriere
     tagline: Devops Engineer
