--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ params:
     title: Noah LaFerriere
     tagline: Devops Engineer
     profile_img: images/IMG_5182(1).jpeg
-    profile_img_alt: Author avatar
+    profile_img_alt: Noah's Profile Pic
     background: dark
     has_nav: true
     nav_links:
