config.yaml: updated no_follow in nav_links

--- a/config.yaml
+++ b/config.yaml
@@ -24,6 +24,7 @@ params:
       - label: Contact
         url: /contact/
         style: link
+        no_follow: true
     has_social: true
     social_links:
       - label: Twitter
