--- a/config.yaml
+++ b/config.yaml
@@ -23,7 +23,7 @@ params:
         style: link
       - label: Contact
         url: /contact/
-        style: button
+        style: link
         no_follow: true
     has_social: true
     social_links:
