--- a/config.yaml
+++ b/config.yaml
@@ -42,6 +42,13 @@ params:
         style: icon
         icon_class: fa-dev
         new_window: true
+      - label: lorem-ipsum
+        url: lorem-ipsum
+        style: link
+        icon_class: lorem-ipsum
+        new_window: false
+        no_follow: false
+        type: action
   footer:
     content: >-
       &copy; Stackbit. All rights reserved. This Jamstack site was created with
