--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 title: Noah LaFerriere
 baseURL: /
 params:
-  description: Personal blogging theme for Stackbit
+  description: Noah's
   layout_style: overflow
   palette: violet
   header:
