--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 title: Noah LaFerriere
 baseURL: /
 params:
-  description: Noah's web porfolio
+  description: Noahs web porfolio
   layout_style: overflow
   palette: violet
   header:
