--- a/config.yaml
+++ b/config.yaml
@@ -41,9 +41,7 @@ params:
     content: >-
       Copywrite &copy; Noah LaFerriere. All rights and lefts reserved. Created
       with <a href="https://www.stackbit.com/?utm_source=deployed-footer"
-      target="_blank" rel="noopener">Stackbit</a>. Create yours <a
-      href="https://app.stackbit.com/create?theme=fresh&utm_source=deployed-footer"
-      target="_blank" rel="noopener">now</a>
+      target="_blank" rel="noopener">Stackbit</a>
 taxonomies:
   stub: stub
 disableKinds:
