--- a/config.yaml
+++ b/config.yaml
@@ -39,8 +39,7 @@ params:
         new_window: true
   footer:
     content: >-
-      Copyright &copy; Noah LaFerriere 2021. All rights and lefts reserved.
-      Created with <a
+      All rights and lefts reserved. Created with <a
       href="https://www.stackbit.com/?utm_source=deployed-footer"
       target="_blank" rel="noopener">Stackbit</a>
 taxonomies:
