config.yaml: updated tagline in header

--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ params:
   palette: violet
   header:
     title: Noah LaFerriere
-    tagline: Devops Engineer
+    tagline: Software Engineer
     profile_img: images/IMG_5182(1).jpeg
     profile_img_alt: Noah's Profile Pic
     background: dark
