config.yaml: updated label in nav_links

--- a/config.yaml
+++ b/config.yaml
@@ -25,7 +25,7 @@ params:
         url: /contact/
         style: link
         no_follow: true
-      - label: lorem-ipsum
+      - label: Portfolio
         url: lorem-ipsum
         style: link
         icon_class: lorem-ipsum
