--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ params:
         style: link
         no_follow: true
       - label: Portfolio
-        url: lorem-ipsum
+        url: portfolio
         style: link
         icon_class: lorem-ipsum
         new_window: false
