--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -327,6 +327,24 @@ models:
         name: excerpt
         label: Excerpt
         description: The excerpt of the page displayed in meta data.
+  portfolio:
+    type: page
+    urlPath: /portfolio
+    label: Portfolio
+    layout: portfolio
+    file: portfolio/_index.md
+    hideContent: true
+    singleInstance: true
+    fields:
+      - type: string
+        name: title
+        label: Title
+        description: The title of the page.
+        required: true
+      - type: string
+        name: excerpt
+        label: Excerpt
+        description: The excerpt of the page displayed in meta data.
   page:
     type: page
     label: Page
