--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -416,6 +416,50 @@ models:
         name: canonical_url
         label: Canonical URL
         description: 'The canonical url of the post, if post originates elsewhere.'
+  project:
+    type: page
+    urlPath: '/projects/{slug}'
+    label: Project
+    layout: post
+    folder: projects
+    fields:
+      - type: string
+        name: title
+        label: Title
+        description: The title of the post.
+        required: true
+      - type: string
+        name: subtitle
+        label: Subtitle
+        description: The text shown just below the post title.
+      - type: date
+        name: date
+        label: Date
+        required: true
+      - type: image
+        name: thumb_img_path
+        label: Image (blog feed)
+        description: The image shown in the blog feed.
+      - type: string
+        name: thumb_img_alt
+        label: Image alt text (blog feed)
+        description: The alt text of the blog feed image.
+      - type: image
+        name: content_img_path
+        label: Image (single post)
+        description: The image shown in the single post.
+      - type: string
+        name: content_img_alt
+        label: Image alt text (single post)
+        description: The alt text of the single post image.
+      - type: string
+        name: excerpt
+        label: Excerpt
+        description: The excerpt of the post displayed in the blog feed and meta data.
+      - type: string
+        name: canonical_url
+        label: Canonical URL
+        description: 'The canonical url of the post, if post originates elsewhere.'
   section:
     type: object
     label: Section
